# tiny-userpic

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml  readme.md  test_userpic.py  userpic.py
.github/workflows/: lint.yml  linters.yml  pypi.yml  tests.yml
tests/: test_blocks.py  test_generator.py  test_svg.py  test_userpic.py  test_utils.py
userpic/: __init__.py  __main__.py  __version__.py  blocks.py  main.py  svg.py  tools.py  userpic.py  utils.py
